Fix overflow on header

--- a/assets/stylesheets/book/header.less
+++ b/assets/stylesheets/book/header.less
@@ -12,6 +12,7 @@
 
         background: #242628;
         color: #e2edf2;
+        overflow: hidden;
 
         .btn {
             display: block;
